platform/monitoring/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.192-168-1-240.sslip.io
  rules:
    - backendRefs:
        - name: kps-grafana
          port: 80
